--- a/index.html
+++ b/index.html
@@ -12,20 +12,15 @@
   </head>
   <body>
     <header>
-
-      
       <div class="container">
         <nav class="navbar">
-          <ul class="nav-links">
-            <li ><a class="nav-link href="#">Home</a></li>
-            <li ><a class="nav-link href="#">About</a></li>
-            <li ><a class="nav-link href="#">Contact</a></li>
-          </ul>
+          <div class="nav-links">
+            <a class="nav-link href="#">Home</a>
+            <a class="nav-link href="#">About</a>
+            <a class="nav-link href="#">Contact</a>
+          </div>
           <h1 class="logo">Landing</h1>
           <button class="nav-btn"><a href="#">Buy Now</a></button>
-          <div class="nav-icon">
-            <i class="fa-solid fa-bars"></i>
-          </div>
         </nav>
         <section class="header-info">
           <h1 class="header-title">
@@ -116,7 +111,7 @@
       </section>
 
       <section class="price">
-        <iv class="container price-container">
+        <div class="container price-container">
         <div class="price-box">
           <h1 class="price-title">A Price To Suit Everyone</h1>
           <p class="price-content">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus </p>
@@ -131,7 +126,7 @@
           <p class="price-price-box-content-two">See, One price. Simple.</p>
           <button class="price-btn-purchase">Purchse Now</button>
         </div>
-      </iv>
+      </div>
       </section>
 
       
@@ -159,5 +154,8 @@
         </div>
       </div>
     </footer>
+
+    <script src="text/javascript" src="./js/jquery.com_jquery-3.7.1.min.js"></script>
+  <script src="text/javascript" src="./js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
