--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
           <button class="footer-btn">Purchase now</button>
         </div>
         <div class="footer-bottom-box">
-          <ul class=" footer-bottom-left ">
-            <li ><a class="nav-link href="#">Home</a></li>
-            <li ><a class="nav-link href="#">About</a></li>
-            <li ><a class="nav-link href="#">Contact</a></li>
-          </ul>
+          <div class=" footer-bottom-left ">
+            <a class="nav-link href="#">Home</a>
+            <a class="nav-link href="#">About</a>
+            <a class="nav-link href="#">Contact</a>
+          </div>
           <ul class="footer-bottom-right">
             <li><i class="fa-brands fa-facebook-f footer-icon"></i></li>
             <li><i class="fa-brands fa-linkedin footer-icon"></i></li>
